Quickfix for iOS 13 privacy policy. Disable bluetooth functionality in plugin.xml

--- a/plugin.xml
+++ b/plugin.xml
@@ -63,6 +63,7 @@
         <!--END_MODULE LOCATION-->
 
         <!--BEGIN_MODULE BLUETOOTH-->
+        <!-- FIXME: Disabled to new ios 13 privacy policy
         <config-file target="config.xml" parent="/*">
             <feature name="Diagnostic_Bluetooth">
                 <param name="ios-package" value="Diagnostic_Bluetooth" />
@@ -82,6 +83,7 @@
         <config-file target="*-Info.plist" parent="NSBluetoothPeripheralUsageDescription">
             <string>This app requires bluetooth access to function properly.</string>
         </config-file>
+        -->
         <!--END_MODULE BLUETOOTH-->
 
         <!--BEGIN_MODULE WIFI-->
